Another load of functional fixes